# overdrip

./: .firebaserc  .gitignore  AUTH_DESIGN.md  Cargo.toml  LICENSE  README.md  TESTING.md  biome.json  eslint.config.js  firebase.json  firestore.rules  package.json
infrastructure/: README.md
infrastructure/terraform/: main.tf
src/: config.rs  lib.rs  main.rs
src/auth/: mod.rs  oath.rs  oauth.rs  token_store.rs
src/cli/: config.rs  mod.rs
