[package]
name = "overdrip"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version="0.8.6", features=["macros"] }
base64 = "0.22.1"
clap = { version = "4.5.48", features = ["derive"] }
directories = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
toml = "0.9.7"
